Nav bar mobile and desktop fully responsive

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,367 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  scroll-behavior: smooth;
+  background: #fff;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 8vh;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 0px #E5E9F2;
+          box-shadow: 0px 1px 0px #E5E9F2;
+  position: relative;
+  z-index: 2;
+  padding: 2%;
+}
+
+nav .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav .logo img {
+  margin-right: 3%;
+  height: 48px;
+}
+
+nav .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-transform: capitalize;
+}
+
+nav .nav-links li {
+  list-style: none;
+}
+
+nav .nav-links a {
+  color: #BFAFAF;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: 700;
+  font-size: 1rem;
+  position: relative;
+  font-family: 'Poppins', sans-serif;
+}
+
+nav .nav-links a:hover {
+  opacity: 0.9;
+}
+
+nav .nav-links a:focus {
+  opacity: 0.7;
+}
+
+nav .nav-links a::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  top: 25px;
+  width: 0%;
+  height: 2px;
+  border-radius: 10px;
+  margin: auto;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+  opacity: 0;
+  background-color: #000;
+}
+
+nav .nav-links a:hover::after {
+  width: 100%;
+  opacity: 1;
+}
+
+nav .active {
+  color: #000 !important;
+}
+
+nav .burger {
+  display: none;
+  cursor: pointer;
+  z-index: 99;
+}
+
+nav .burger .line0 {
+  width: 30px;
+  height: 3px;
+  background: #213654;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+nav .burger .line1 {
+  width: 30px;
+  height: 3px;
+  background: #213654;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+nav .burger .line2 {
+  width: 30px;
+  height: 3px;
+  background: #213654;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+nav .bro {
+  display: none;
+  cursor: pointer;
+  z-index: 99;
+}
+
+nav .bro .line0 {
+  width: 30px;
+  height: 3px;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+          transform: rotate(-45deg) translate(-5px, 6px);
+  background: #213654;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+nav .bro .line1 {
+  width: 30px;
+  height: 3px;
+  background: #213654;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+
+nav .bro .line2 {
+  width: 30px;
+  height: 3px;
+  background: #213654;
+  margin: 5px;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transform: rotate(42deg) translate(-5px, -7px);
+          transform: rotate(42deg) translate(-5px, -7px);
+  margin-top: 5px;
+}
+
+nav .login a {
+  color: #223256;
+  border-radius: 12px;
+  padding: 10px 15px;
+}
+
+nav .login a:hover {
+  background: #223256;
+  color: #fff !important;
+  opacity: 1 !important;
+}
+
+nav .login a::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  top: 25px;
+  width: 0%;
+  height: 0px;
+  border-radius: 10px;
+  margin: auto;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+nav .request a {
+  color: #223256;
+  border-radius: 12px;
+  padding: 10px 15px !important;
+  background: #223256;
+  color: #fff !important;
+}
+
+nav .request a:hover {
+  opacity: 0.8;
+}
+
+nav .request a::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  top: 25px;
+  width: 0%;
+  height: 0px;
+  border-radius: 10px;
+  margin: auto;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+@media screen and (max-width: 1024px) {
+  nav .nav-links {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav .nav-links {
+    display: none;
+  }
+  nav .nav-links li {
+    opacity: 0;
+    margin-top: 0;
+    font-size: 12px;
+  }
+  nav .burger, nav .bro {
+    display: block;
+  }
+  nav .logo {
+    z-index: 5;
+  }
+  nav .logo img {
+    height: 25px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-top: 5.5px;
+  }
+  @-webkit-keyframes navlinkFade {
+    from {
+      opacity: 0;
+      -webkit-transform: translateX(50px);
+              transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+  }
+  @keyframes navlinkFade {
+    from {
+      opacity: 0;
+      -webkit-transform: translateX(50px);
+              transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+  }
+}
+
+.nav-active {
+  -webkit-transform: translate(0%);
+          transform: translate(0%);
+  position: absolute;
+  right: 0;
+  height: 90vh;
+  top: 0;
+  background: #fff;
+  color: #573F7B;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-transition: -webkit-transform 0.5s ease-in;
+  transition: -webkit-transform 0.5s ease-in;
+  transition: transform 0.5s ease-in;
+  transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
+  z-index: 4;
+}
+
+.nav-active li {
+  list-style: none;
+}
+
+.nav-active a {
+  color: #BFAFAF;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: 700;
+  font-size: 1rem;
+  position: relative;
+  font-family: 'Poppins', sans-serif;
+}
+
+.nav-active a:hover {
+  opacity: 0.9;
+}
+
+.nav-active a:focus {
+  opacity: 0.7;
+}
+
+.nav-active a::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  top: 25px;
+  width: 0%;
+  height: 2px;
+  border-radius: 10px;
+  margin: auto;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+  opacity: 0;
+  background-color: #000;
+}
+
+.nav-active a:hover::after {
+  width: 100%;
+  opacity: 1;
+}
+/*# sourceMappingURL=style.css.map */
