--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -227,6 +227,9 @@ nav {
         
         .nav-links {
             width: 90%; 
+            a {
+                font-size: 0.8rem;
+            }
         }
     }
    
