--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -170,7 +170,7 @@ nav {
         a {
             color:  #223256;
             border-radius: 12px;
-            padding: 10px 15px;
+            padding: 7px 10px;
             
             &:hover {
                 background: #223256;
@@ -198,7 +198,7 @@ nav {
         a {
             color:  #223256;
             border-radius: 12px;
-            padding: 10px 15px !important;
+            padding: 7px 10px !important;
             background: #223256;
             color: #fff !important;
             &:hover {
@@ -336,5 +336,241 @@ nav {
     }
 }
 
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 2.6rem;
+    color: #333333;
+}
 
 
+p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 24px;
+    color: #6E6E6E;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 45px;
+    color: #333333;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+//defining my container
+.my-container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+} 
+@media (min-width: 576px) {
+    .my-container {
+        width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .my-container {
+        width: 100%;
+    }
+}
+@media (min-width: 992px) {
+    .my-container {
+        width: 960px;
+    }
+}
+@media (min-width: 1200px) {
+    .my-container {
+        width: 1140px;
+    }
+}
+
+.newsletterform {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .email-con {
+        width: 70%;
+        input {
+            width: 100%;
+            padding: 2%;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 500;
+            font-size: 1rem;
+            color: #213654;
+            border: 1px solid #D4D4D4;
+            border-radius: 10px 0px 0px 12px;
+            outline: none;
+            &::placeholder {
+                color: #BFAFAF;
+                font-family: 'Poppins', sans-serif;
+            }
+    
+            &:focus {
+                border: 1px solid #213654;
+            }
+        }
+
+        
+
+    }
+
+    .submit-btn {
+        width: 30%;
+        input {
+            width: 100%;
+            padding: 4.7%;
+            border: 1px solid #213654;
+            background: #213654;
+            color: #fff;
+            outline: none;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 1rem;
+            letter-spacing: 0.0168em;
+            border-radius:  0px 10px 12px 0px;
+
+            &:hover {
+                background: none;
+                color: #213654;
+                border: 1px solid #213654;
+            }
+        }
+    }
+}
+
+
+//styles for banner.js component
+.banner {
+    background: #EBF3F3;
+    width: 100%;
+    height: 500px;
+
+    .banner-inner {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    h1, p, h3 {
+        text-align: center;
+        margin-bottom: 2.5%;
+    }
+}
+
+//styles for aboutvideos component
+.about-videos {
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+    .about-videos-inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .about {
+            padding: 2%;
+        }
+
+        div {
+            width: 48%;
+            box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.08);
+            height: 350px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            border-radius: 12px;
+            a, p, h3 {
+                text-align: center;
+                margin-bottom: 5%;
+            }
+
+            a {
+                font-family: 'Poppins', sans-serif;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 1rem;
+                color: #000000;
+                text-decoration: none;
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+
+            video {
+                border-radius: 12px;
+            }
+        }
+    }
+}
+
+.features {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background: #EBF3F3;
+
+    .features-inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h1, p {
+            text-align: center;
+            margin-bottom: 2.5%;
+        }
+    
+        .cont {
+            width: 80%;
+            .feature {
+                width: 100%;
+                display: grid;
+                grid-template-columns: 33.3% 33.3%  33.3% ;
+                background: #F2FAFA;
+                padding: 1%;
+        
+                
+                    h3 {
+                        text-align: center;
+                    }
+            }
+        
+            .feature1 {
+                width: 100%;
+                display: grid;
+                grid-template-columns: 33.3% 33.3%  33.3% ;
+                background:  #fff;
+
+                p {
+                    border-bottom: 1px solid #D4D4D4;
+                    padding: 5%;
+                    margin-bottom: 0;
+                }
+               
+        
+                .green {
+                    color: #91D738;
+                }
+            }
+        }
+    }
+
+   
+}
