--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -574,3 +574,234 @@ video {
 
    
 }
+
+.why-choose {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    .why-choose-inner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h3, p {
+            text-align: center;
+            margin-bottom: 2.5%;
+        }
+
+        .reason-cont {
+            width: 100%;
+            margin-top: 5%;
+            .resort {
+                display: grid;
+                grid-template-columns: 25% 25%  25% 25%;
+                background: #FFFFFF;
+                
+               
+               
+
+                .resort-inner {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    height: 120px;
+                    padding: 5%;
+                    border-radius: 10px;
+                     margin-bottom: 5%;
+                     box-shadow: 10px 32px 50px rgba(51, 51, 51, 0.03);
+                    
+                    .fin {
+                        width: 20%;
+                        height: 100%;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: contain;
+                        }
+
+                    }
+
+                    .p2 {
+                        width: 70%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: flex-start;
+                        flex-direction: column;
+                        p {
+                            text-align: left;
+                        }
+
+                        .bold {
+                            font-weight: bold;
+                        }
+
+                        .pale {
+                            font-size: 0.8rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.products {
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+    .inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h3, p {
+            text-align: center;
+            margin-bottom: 2.5%;
+        }
+
+        .product {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+           
+            border-radius: 16px;
+            margin-top: 5%;
+
+            .Standard{
+                background: #213654;
+                border-radius: 16px;
+                // height: 500px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+                width: 30%;
+                padding: 2%;
+                border-radius: 16px;
+                
+                .icon {
+                    color: #F4BC4D;
+                }
+
+                .starred {
+                    display: block;
+                    margin-bottom: 5%;
+                    margin-top: 5%;
+                }
+                h1, h3 , p {
+                    color:  #fff;
+                }
+
+                .snip {
+                    display: block;
+                    width: 100%;
+                    margin-bottom: 5%;
+                    margin-top: 5%;
+                }
+
+                div {
+                    margin-bottom: 5%;
+                    p {
+                        text-align: left;
+                        color: #fff;
+                        margin-bottom: 5%;
+
+                        .con {
+                            color: #fff;
+                        }
+                    }
+                }
+
+                a {
+                    font-family: "Poppins", sans-serif  ;
+                    font-weight: normal;
+                    font-size: 1.25rem;
+                    line-height: 30px;
+                    text-align: center;
+                    background: #fff;
+                    color: #213654;
+                    display: block;
+                    width: 100%;
+                    text-decoration: none;
+                    padding: 2%;
+                    margin-top: 5%;
+                    border-radius: 12px;
+                    margin-bottom: 5%;
+                    &:hover {
+                        border: 1px solid #fff;
+                        background: none;
+                        color: #fff;
+                    }
+                }
+
+            }
+
+            .Basic, .Enterprise {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+                width: 30%;
+                padding: 2%;
+                border-radius: 16px;
+                // height: 400px;
+
+                .starred {
+                    display: none;
+                }
+                .icon {
+                    color: #F4BC4D;
+                }
+
+                h1, h3, p {
+                    text-align: center;
+                    margin-bottom: 2.5%;
+                }
+
+                .snip {
+                    display: block;
+                    width: 100%;
+                    margin-bottom: 5%;
+                    margin-top: 5%;
+                }
+
+                div {
+                    margin-bottom: 5%;
+                    p {
+                        text-align: left;
+                        color: #6E6E6E;
+                        margin-bottom: 5%;
+                        .con {
+                            color: #213654;
+                        }
+                    }
+                }
+
+                a {
+                    font-family: "Poppins", sans-serif  ;
+                    font-weight: normal;
+                    font-size: 1.25rem;
+                    line-height: 30px;
+                    text-align: center;
+                    background: #213654;
+                    color: #FFFFFF;
+                    display: block;
+                    width: 100%;
+                    text-decoration: none;
+                    padding: 2%;
+                    margin-top: 5%;
+                    border-radius: 12px;
+                    &:hover {
+                        border: 1px solid #213654;
+                        background: none;
+                        color: #213654;
+                    }
+                }
+            }
+        }
+    }
+}
